<resources>
    <string name="app_name">BookHub</string>
    <string name="dashboard">DashBoard</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="about_app">About</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragment" />
    <string name="dashboard_fragmentt">Dashboard Fragment</string>
    <string name="favourites_fragment">Favourites Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="list_item">List Item</string>
    <string name="check_internet">Check Internet</string>
    <string name="name_of_the_book">Name of the book</string>
    <string name="name_of_the_author">Name of the author</string>
    <string name="rs_299">RS 299</string>
    <string name="about_the_book">About the book</string>
    <string name="hello_blank_fragmentt">Hello Blank Fragment</string>
    <string name="sort">Sort</string>
    <string name="hello_world">Hello World</string>

</resources>