<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DescriptionActivity"
    android:background="#ffffff">




    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/purple_500"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/toolbar"
        >

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:orientation="horizontal"
            android:weightSum="6"
            android:id="@+id/llcontent">
         <ImageView
             android:id="@+id/imgBookImage"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             tools:ignore="Suspicious0dp"
             android:layout_weight="1.5"
             android:src="@mipmap/ic_launcher"
             android:scaleType="centerCrop"
             android:padding="5dp"/>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"

                android:layout_weight="3.3">

            
            <TextView
                android:id="@+id/txtBookName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_of_the_book"
                android:padding="8dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#000000"
                />
                <TextView
                    android:id="@+id/txtBookAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_of_the_author"
                    android:padding="8dp"
                    android:textSize="15sp"

                    android:textColor="#000000"
                    android:layout_below="@id/txtBookName"
                    />
                <TextView
                    android:id="@+id/txtBookPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rs_299"
                    android:textStyle="bold"
                    android:padding="8dp"

                    android:textSize="15sp"

                    android:textColor="#000000"
                    android:layout_below="@id/txtBookAuthor"
                    />
            </RelativeLayout>

            <TextView
                android:id="@+id/txtBookRating"
                android:layout_weight="1.2"
                android:layout_width="0dp"
                android:padding="4dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_star"
                android:textColor="#ffca28"
                android:text="4.5"
                android:drawablePadding="4dp"
                android:textSize="15sp"
                android:textStyle="bold"/>

        </LinearLayout>
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_below="@id/llcontent"
               >
               <TextView
                   android:id="@+id/txtAbouttheBookContent"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_centerHorizontal="true"
                   android:padding="6dp"
                   android:textStyle="bold"
                   android:textSize="16sp"
                   android:layout_marginTop="4dp"
                   android:text="@string/about_the_book"/>

               <TextView
                   android:layout_below="@id/txtAbouttheBookContent"
                   android:id="@+id/txtBookDesc"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_margin="10dp"
android:textColor="@color/black"
                   android:padding="6dp"

                   android:textSize="18sp"

                   android:text="@string/hello_blank_fragmentt"/>


           </RelativeLayout>


</RelativeLayout>



    </ScrollView>

    <Button
        android:id="@+id/btnAddToFav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:textColor="#ffffff"
        android:text="Add To Favourites"
        android:textSize="19sp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"

        />
<RelativeLayout
    android:id="@+id/progressLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:background="#ffffff"

    >


<ProgressBar
    android:id="@+id/progressBar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"

    />

</RelativeLayout>





</RelativeLayout>
